# JDA

./: CMakeLists.txt
examples/: CMakeLists.txt  Detection.cpp
model/: config.json
src/: main.cpp  test.cpp
src/jda/: cascador.cpp  common.cpp
